# pythonic-dao

./: .gitignore  README.md  generate-mnemonic.py  pyproject.toml  serve.py
contracts/: Crowdfunding.vy
scripts/: deploy-crowdfund.py
static/: app.js
static/abi/: Crowdfunding.js
static/components/: VeuButton.js  VeuInput.js  VeuPane.js
static/styles/: VeuButton.css  VeuInput.css  VeuPane.css  index.css
templates/: index.html
